Fixed: Partner Logos slider stretching images 100% width of column

--- a/framework/assets/css/themeblvd-rtl.css
+++ b/framework/assets/css/themeblvd-rtl.css
@@ -6464,14 +6464,15 @@ body.mobile .tb-bg-video {
 	/* overflow: hidden; */
 	position: relative;
 }
-.tb-logo img {
+.tb-logos .slides img {
 	margin: auto;
 	max-height: 100%;
 	position: absolute;
 	top: 0;
-	left: 0;
-	bottom: 0;
 	right: 0;
+	bottom: 0;
+	left: 0;
+	width: auto;
 }
 .tb-logo.boxed {
 	background-color: #ffffff;
