--- a/framework/assets/css/themeblvd.css
+++ b/framework/assets/css/themeblvd.css
@@ -6470,7 +6470,7 @@ body.mobile .tb-bg-video {
 	/* overflow: hidden; */
 	position: relative;
 }
-.tb-logo img {
+.tb-logos .slides img {
 	margin: auto;
 	max-height: 100%;
 	position: absolute;
@@ -6478,6 +6478,7 @@ body.mobile .tb-bg-video {
 	right: 0;
 	bottom: 0;
 	left: 0;
+	width: auto;
 }
 .tb-logo.boxed {
 	background-color: #ffffff;
